Clean up code slightly